--- a/test-site/index.html
+++ b/test-site/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width" />
         <link href="styles/style.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-        <title>テストページ</title>
+        <title>テスト1ページ</title>
     </head>
     <body>
         <h1>一ノ瀬うるは</h1>
